# insurance-lda-risk

./: README.md  pyproject.toml  run_tests_databricks.py
notebooks/: insurance_lda_risk_demo.py
src/insurance_lda_risk/: __init__.py  _types.py  drift.py  encoder.py  profiler.py  selector.py  validator.py
tests/: conftest.py  test_drift.py  test_encoder.py  test_integration.py  test_profiler.py  test_selector.py  test_validator.py
