[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-lda-risk"
version = "0.1.0"
description = "LDA-based probabilistic risk profiling for insurance portfolios"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" }
]
keywords = [
    "insurance",
    "actuarial",
    "LDA",
    "latent dirichlet allocation",
    "risk profiling",
    "portfolio segmentation",
    "pricing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
polars = ["polars>=0.19"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/burning-cost/insurance-lda-risk"
Documentation = "https://github.com/burning-cost/insurance-lda-risk#readme"
Repository = "https://github.com/burning-cost/insurance-lda-risk"
Issues = "https://github.com/burning-cost/insurance-lda-risk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_lda_risk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
